--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stockx-nest-starter",
+  "name": "nestjs-demo",
   "version": "1.0.0",
   "description": "Starter project for nest.js app",
   "author": "Artem Popov <artempopov@v.stockx.com>",
